# hum

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: calendar.rs  hum.rs  inbox.rs  lib.rs  note_meta.rs  prefs.rs  todo_index.rs  todo_parser.rs  vault_manifest.rs
src/components/: Chat.tsx  Dashboard.tsx  HubView.tsx  Inbox.tsx  LibraryView.tsx  NotesView.tsx  Plan.tsx  ProjectHub.tsx  ProjectNotesView.tsx  ProjectTodos.tsx  ProjectsView.tsx  RightClickHint.tsx  SettingsModal.tsx  SolarSystem.tsx  TaggedText.tsx  Vault.tsx  VaultCard.tsx  VaultChips.tsx  VaultFAB.tsx  VaultFilter.tsx  VaultLanding.tsx  VaultRail.tsx  Welcome.tsx  classifiers.ts  editor-config.ts  hashtag.ts  project-mention.ts  renderers.tsx  wikilink.ts
src/hooks/: useFuseFilter.ts  useScrollFade.ts
src/prefs/: prefs.ts
src/styles/: components.css  global.css  project-list.css  vault-cards.css
src/theme/: theme.ts  tokens.css
