[package]
name = "hum"
version = "0.1.0-2"
description = "Personal productivity desktop app"
authors = ["Oliwer Weber"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["image-png", "protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.5"
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dotenvy = "0.15"
chrono = "0.4"
chrono-tz = "0.9"
uuid = { version = "1", features = ["v4"] }
regex = "1"
once_cell = "1"
rayon = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
